# sahim-django-common

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
sahim_django_common/: __init__.py  apps.py
tests/: conftest.py  test_placeholder.py
